# Fontsequal

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LANDING_PAGE_COPY.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SECURITY_RELEASE.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.agents/skills/: SKILL.md  design.md
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  font_install_issue.md  provider_api_issue.md  ui_bug.md
.github/workflows/: build.yml  ci.yml  release.yml
docs/: UPDATER_TESTING.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: collections.rs  fonts.rs  google_fonts.rs  import_fonts.rs  installed.rs  mod.rs  settings.rs  unified_fonts.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  repositories.rs
src-tauri/src/fonts/: hash.rs  importer.rs  installer.rs  mod.rs  normalizer.rs  parser.rs  scanner.rs  uninstaller.rs
src-tauri/src/google/: cache.rs  client.rs  mod.rs  normalizer.rs
src-tauri/src/os/: linux.rs  mod.rs  windows.rs
src-tauri/src/providers/: bunny_fonts.rs  google_fonts.rs  managed_fonts.rs  mod.rs  provider.rs  registry.rs  system_fonts.rs
src/app/: App.tsx  AppHeader.tsx  AppShell.tsx  AppSidebar.tsx  PageContainer.tsx  SearchCommand.tsx  ThemeToggle.tsx  theme-provider.tsx
src/components/: EmptyState.tsx
src/lib/: tauri.ts
src/types/: font.ts  (+3 more)
(+60 files in other folders)
